fixed connect issues